--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         </script>
 
 </body>
+    
+<body>
 
+
+    <img src="images/BackgroundNOW.jpg" class="img-fluid" alt="...">
+</body>
 
 
 
